<resources>
    <string name="app_name">Mechanic_Zone</string>
    <string name="title_activity_google_maps">Google_Maps_Activity</string>
    <string name="title_activity_maps_mechanic">MapsActivity_Mechanic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open"/>
    <string name="close"/>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="task">Task</string>
    <string name="email_user">Email_user</string>
    <string name="don_t_have_account_sign_up_here">Don\'t have account? Sign up here</string>
    <string name="sign_in">Sign in</string>
    <string name="password_user">Password_user</string>
    <string name="log_in_here">Log in Here</string>
    <string name="log_in_hereM">Log In Here</string>
    <string name="email_mechanic">Email_Mechanic</string>
    <string name="password_mechanic">Password_Mechanic</string>
    <string name="sign_inM">sign in</string>
    <string name="don_t_have_account_sign_up_hereM">Don\'t have account? Sign up here</string>
    <string name="active_mechanics">Active Mechanics</string>
    <string name="reset_email">Reset Email</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="old_password">Old_Password</string>
    <string name="enter_new_emaill">Enter New Emaill</string>
    <string name="new_email">New Email</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="todoM">TODO</string>
    <string name="reset_name">Reset Name</string>
    <string name="enter_old_passwordM">Enter Old Password</string>
    <string name="old_passwordM">Old_Password</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="new_name">New Name</string>
    <string name="saveM">Save</string>
    <string name="todo1">TODO</string>
    <string name="search_mechanic">Search Mechanic</string>
    <string name="search_results_will_be_displayed_here">Search results will be displayed here</string>
    <string name="search">Search...</string>
    <string name="search1">Search</string>
    <string name="search_results_will_be_displayed_here1">Search results will be displayed here</string>
    <string name="mechanics_details">Mechanics_Details</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="phone">Phone</string>
    <string name="call_now">Call now</string>
    <string name="service_provider_details">Service Provider Details</string>
    <string name="provider_name">Provider Name :</string>
    <string name="provider_phone">Provider Phone :</string>
    <string name="settings1">Settings</string>
    <string name="_1_reset_your_email">1.Reset Your Email</string>
    <string name="_2_reset_your_password">2.Reset Your Password</string>
    <string name="_3_reset_your_name">3.Reset Your Name</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here</string>
    <string name="sign_up">Sign up</string>
    <string name="password_mecahnic">Password_Mecahnic</string>
    <string name="phone_mechanic">Phone_Mechanic</string>
    <string name="email_mechanicM">Email_Mechanic</string>
    <string name="title_mechanic">Title_Mechanic</string>
    <string name="name_mechanic">Name_Mechanic</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="sign_up_hereU">Sign Up Here</string>
    <string name="name_user">Name_user</string>
    <string name="email_userU">Email_user</string>
    <string name="password_userU">Password_user</string>
    <string name="sign_upU">Sign Up</string>
    <string name="already_have_account_sign_in_here">Already have account? Sign in here</string>
    <string name="welcome_to_the_app">Welcome to the app</string>
    <string name="who_are_you">who are you?</string>
    <string name="user">USER</string>
    <string name="mechanic">Mechanic</string>
    <string name="todo2">TODO</string>
    <string name="service_provider">Service Provider</string>
    <string name="mechanics_detailsM">Mechanics_Details</string>
    <string name="_1">1.</string>
    <string name="nameA">Name</string>
    <string name="reset_paasword">Reset Paasword</string>
    <string name="enter_old_passwordU">Enter Old Password</string>
    <string name="old_passwordU">Old_Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="saveU">Save</string>
    <string name="confirm_new_passwordU">Confirm New Password</string>
    <string name="active_service_providers">Active Service Providers</string>
    <string name="homecarehub">HomeCareHub</string>
    <string name="search_for_service_provider">Search for service Provider</string>
    <string name="search11">Search...</string>
    <string name="search12">Search</string>
    <string name="search_results_will_be_displayed_here12">Search results will be displayed here</string>
    <string name="password_service_provider">Password_Service Provider</string>
    <string name="phone_service_provider">Phone_Service Provider</string>
    <string name="email_service_provider">Email_Service Provider</string>
    <string name="title_service_provider">Title_Service Provider</string>
    <string name="name_service_provider">Name_Service Provider</string>
    <string name="service_provider_s_email">Service Provider\'s Email</string>
    <string name="service_provider_s_password">Service Provider\'s Password</string>

</resources>