<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item android:title="@string/task">
            <menu>

                <item
                    android:id="@+id/mSettings"
                    android:icon="@drawable/ic_baseline_menu_24"
                    android:title="@string/settings" />

                <item
                    android:id="@+id/mLogout"
                    android:icon="@drawable/ic_baseline_menu_24"
                    android:title="@string/logout" />

                <item
                    android:id="@+id/mAbout"
                    android:icon="@drawable/ic_baseline_menu_24"
                    android:title="@string/about_app" />
                <item
                    android:id="@+id/mActiveperson"
                    android:icon="@drawable/ic_baseline_menu_24"
                    android:title="Online Service Providers" />



            </menu>

        </item>

    </group>

</menu>
