<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".ClientUser.Password_Reset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A981A6A3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="150dp"
            android:layout_marginTop="30dp"
            android:text="@string/reset_email"
            android:textColor="#0B0A0A"
            android:textColorHighlight="#100202"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/enter_old_password"

            android:textColor="#0C0C0C"
            android:textColorHighlight="#101010" />

        <EditText
            android:id="@+id/old_PassU_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/password_lock"
            android:ems="10"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textColorHint="#ACA0A0"
            tools:ignore="RtlSymmetry,TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/enter_new_emaill"
            android:textColor="#090909" />

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:textColor="#000000"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:ems="10"
            android:hint="@string/new_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:textColorHint="#ACA1A1"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/saveEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="100dp"
            android:text="@string/save" />


    </LinearLayout>

</LinearLayout>