<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".ClientUser.Password_Reset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A981A6A3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:text="@string/reset_paasword"
            android:textColor="#0E0E0E"
            android:textColorHighlight="#100202"
            android:textColorLink="#101010"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/enter_old_passwordU"
            android:textColor="#0B0A0A"
            android:textColorHighlight="#0C0C0C"
            android:textColorLink="#0B0A0A" />

        <EditText
            android:id="@+id/old_PassP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:textColor="#000000"
            android:paddingStart="10dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/password_lock"
            android:ems="10"
            android:hint="@string/old_passwordU"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHighlight="#101010"
            android:textColorHint="#575252"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/enter_new_password"
            android:textColor="#0C0C0C"
            android:textColorHighlight="#100F0F"
            android:textColorLink="#090909" />

        <EditText
            android:id="@+id/newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:paddingStart="10dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/password_lock"
            android:ems="10"
            android:textColor="#000000"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#5A5656"
            android:autofillHints=""
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/confirm_new_passwordU"
            android:textColor="#0E0E0E"
            android:textColorHighlight="#121111"
            android:textColorLink="#090909" />


        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/password_lock"
            android:ems="10"
            android:textColor="#000000"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:textColorHint="#605959"
            android:textColorLink="#686363"
            tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/savePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="100dp"
            android:text="@string/saveU" />


    </LinearLayout>

    </LinearLayout>