<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AEDAD6"
    tools:context=".ClientUser.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="140dp"
            android:text="@string/settings1"
            android:textColor="#0B0A0A"
            android:textColorHighlight="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:text="@string/_1_reset_your_email"
            android:textColor="#713535"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/passwordReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:text="@string/_2_reset_your_password"
            android:textColor="#683939"
            android:textColorHighlight="@color/black"
            android:textColorHint="#703737"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:text="@string/_3_reset_your_name"
            android:textColor="#6C3838"
            android:textColorHighlight="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />



    </LinearLayout>


    </LinearLayout>
