<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6CED3"
    tools:context=".ClientUser.BottomFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_provider_details"
        android:layout_marginTop="20dp"
        android:layout_marginStart="75dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="240dp"
        android:text="Name  :"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/namee_mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:text="@string/name"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title    :"
        android:layout_marginStart="10dp"
        android:layout_marginTop="125dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/titleeM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="10dp"
        android:text="@string/title"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone :"
        android:layout_marginStart="10dp"
        android:layout_marginTop="170dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/phoneeM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="10dp"
        android:textIsSelectable="true"
        android:text="@string/phone"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="216dp"
        android:textColor="#000000"
        android:background="@color/design_default_color_background"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/call_now"
        android:textAlignment="center" />

</FrameLayout>